--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
-
   <title>MVP Project</title>
 </head>
 
 <body>
-  <div id="game">
-    <span>Something went wrong...</span>
+  <div>
+    <div id="game">
+      <span>Something went wrong...</span>
+    </div>
   </div>
-  <script src="../phaser.js"></script>
+  <script src='./dist/bundle.js'></script>
 </body>
 
 </html>
