Spun up hosted db; built CRUD GET, POST, DELETE methods.

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,7 @@
 
 <body>
   <div>
-    <div id="game">
-      <span>Something went wrong...</span>
-    </div>
+    <div id="game"></div>
   </div>
   <script src='./dist/bundle.js'></script>
 </body>
